[project]
name = "nebuloid"
version = "0.1.0"
description = "A modular Flask-based framework for rapid web app development."
authors = [{ name="Sarvin", email="your@email.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "flask>=2.2",
    "sqlalchemy>=2.0",
    "werkzeug",
]

[project.urls]
"Homepage" = "https://github.com/sxrvinzx/nebuloid"
"Source" = "https://github.com/sxrvinzx/nebuloid"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
